add encryption analytics

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "get-pixels": "^3.3.2",
     "ndarray": "^1.0.18",
+    "ndarray-corr2": "^0.1.0",
+    "ndarray-entropy": "^0.3.0",
+    "ndarray-imhist": "^0.4.2",
     "ndarray-imshow": "^1.0.1",
     "ndarray-scratch": "^1.2.0"
   }
