--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A repository where I share my implementations of interesting algorithms I find reading scientific papers",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -21,12 +21,18 @@
     "get-pixels": "^3.3.3",
     "gnuplot-imshow": "^0.3.0",
     "ndarray": "^1.0.18",
+    "ndarray-concat-cols": "^1.0.0",
+    "ndarray-concat-rows": "^1.0.1",
     "ndarray-corr2": "^0.1.0",
     "ndarray-entropy": "^0.5.0",
     "ndarray-imhist": "^0.5.0",
     "ndarray-imshow": "^1.0.1",
     "ndarray-ops": "^1.2.2",
     "ndarray-scratch": "^1.2.0",
+    "ndarray-tile": "^1.0.3",
     "save-pixels": "^2.3.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.31.0"
   }
 }
